# jenkins-cmake

./: CMakeLists.txt  Jenkinsfile  Readme.md
.github/workflows/: ci.yml  ci_intel.yml  ci_windows.yml
src/: hello.f  hello.f90
